# pseudoblam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: Thumbs.db
assets/models/: assault_rifle.blend  assault_rifle.blend1  assault_rifle.dae  assault_rifle.fbx  assault_rifle.mtl  assault_rifle_skinned.fbx  crate_space.blend  crate_space.fbx  cube.blend  cube.dae  cube.fbx  cube.glb  cube2.fbx  grass.fbx  grunt.fbx  plane.fbx  test_room.fbx
assets/shaders/: albedo.fs  ambient_lighting.fs  basic.fs  basic.vs  blinnphong.fs  blinnphong.vs  bloom.fs  blur.fs  depth.vs  generic.vs  geometry.fs  lighting.fs  model.vs  pbr.fs  phong.fs  quad.fs  quad.vs  shadows.fs  shadows.vs  ssao.fs
assets/shaders/reference/: rasterizer_dx11_define_fx_constants.h
assets/textures/: asdf.dds  black.dds  bricks_diffuse.dds  bricks_normal.dds  color_grid.dds  default_normal.dds  emissive_test.dds  flashlight_gel.dds  grass.dds  gray_50.dds  white.dds  window.dds
assets/textures/assault_rifle/: assault_rifle.dds  assault_rifle_bump.dds  assault_rifle_illum.dds  assault_rifle_illum_colored.dds  assault_rifle_specular.dds  compass_00.dds  compass_01.dds  compass_02.dds  compass_03.dds  compass_04.dds  compass_05.dds  compass_06.dds  compass_07.dds  display.dds  gun_detail.dds  gun_microbump.dds  numbers_plate_00.dds  numbers_plate_01.dds  numbers_plate_02.dds  numbers_plate_03.dds  numbers_plate_04.dds  numbers_plate_05.dds  numbers_plate_06.dds  numbers_plate_07.dds  numbers_plate_08.dds  numbers_plate_09.dds  rubber_microbump.dds
assets/textures/crate_space/: cov_storage.dds  cov_storage_bump.dds  cov_storage_cc.dds  cov_storage_specular.dds
assets/textures/fp_arms/: fp_arms_bump.dds  fp_arms_diffuse.dds  fp_arms_specular.dds
assets/textures/grunt/: grunt_bump.dds  grunt_diffuse.dds  grunt_emissive.dds  grunt_specular.dds
assets/textures/panel_wide/: panel_wide_bump.dds  panel_wide_diffuse.dds  panel_wide_illum.dds  panel_wide_specular.dds
game/source/animations/: animation_data.h
game/source/camera/: camera.c  camera.h
game/source/game/: game.c  game.h
game/source/models/: model_import.c  model_materials.c  model_materials.h  models.h
game/source/objects/: objects.c
game/source/rasterizer/: rasterizer_render_targets.c  rasterizer_render_targets.h  rasterizer_shaders.c  rasterizer_textures.c
game/source/render/: render.c
shared/source/common/: common.c  common.h
source/: animations.c  animations.h  camera.c  camera.h  common.c  common.h  dds.c  dds.h  glsl_types.h  input.c  input.h  lights.c  lights.h  main.c  materials.c  materials.h  models.c  models.h  obj.c  obj.h  render.c  render.h  render_text.c  shaders.c  shaders.h  shell.c  text.c  vertices.c  vertices.h
source/animations/: animation_data.h  animation_manager.c  animation_manager.h
source/camera/: camera.c  camera.h
source/common/: common.c  common.h
source/game/: game.c
source/input/: input.c  input.h
source/models/: materials.c  materials.h  model_animation.c  model_animations.c  model_import.c  model_materials.h  models.c  models.h
source/objects/: lights.c  lights.h  objects.c  objects.h
source/rasterizer/: rasterizer_render_targets.c  rasterizer_shaders.c  rasterizer_shaders.h  rasterizer_textures.c  rasterizer_textures.h  rasterizer_vertices.c  rasterizer_vertices.h
source/render/: framebuffer.c  framebuffer.h  lights.c  render.c  render.h  render_lights.c  render_lights.h  renderbuffer.c  renderbuffer.h  shaders.c  shaders.h  text.c  text.h  textures.c  textures.h  vertices.c
source/shell/: shell.c
source/textures/: dds.c  dds.h
tools/source/: main.c
tools/source/commands/: commands.c  commands.h
